# translations-vlhcc26

./: .gitignore  bayes.py  data.csv  full_data.csv  jacob-2.ipynb  justin.py  participant_info_plots.py  participants.csv  pyproject.toml  requirements.txt
analysis/: OLD_MODEL.stan  UIST25.py  analyze.py  correct.stan  interfaces.csv  lib.py  model.stan  pyproject.toml  stats.csv  time_taken.stan
analysis/data/: interface_groups.csv  interfaces.csv
analysis/misc/: bernoulli.stan  complex.stan
analysis/stan/: correct  correct.stan  time_taken  time_taken.stan
graphics/: Teaser.afdesign  main.afdesign
jacob-code/: jacob.ipynb
old-justin-code/: pyproject.toml
old-justin-code/output/: effect_sizes.csv
