[project]
name = "jy-ms"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "polars-lts-cpu>=1.9.0",
    "matplotlib>=3.9.2",
    "numpy>=2.1.1",
    "cmdstanpy>=1.2.5",
    "arviz>=0.21.0",
    "arviz-base>=1.1.0",
    "arviz-stats>=1.1.0",
]

[tool.ruff]
line-length = 80

[dependency-groups]
dev = [
    "ipython>=9.13.0",
]
