[project]
name = "jy-ms"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "altair>=5.5.0",
    "matplotlib>=3.9.2",
    "numpy>=2.1.3",
    "pandas>=2.2.3",
    "scipy>=1.14.1",
    "seaborn>=0.13.2",
]

[tool.uv]
dev-dependencies = [
    "jupyter>=1.1.1",
    "ipython>=8.27.0",
]
